ajustando imagem no css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Projeto</title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="./assets/images/backg.jpg" alt="">
+            </div>
+            <h1>Web Develope & Front End Desing</h1>
+            <p>Magno Rafael</p>
+            <button>Saiba mais</button>
+        </header>
+    </div>
 </body>
 </html>
