--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
             <div class="img-wrapper">
                 <img src="./assets/images/backg.jpg" alt="">
             </div>
-            <h1>Web Develope & Front End Desing</h1>
-            <p>Magno Rafael</p>
-            <button>Saiba mais</button>
+            <div class="banner">
+                <h1>Web Developer & Front End Desing</h1>
+                <p>Magno Rafael</p>
+                <button>Saiba mais</button>
+
+            </div>
         </header>
     </div>
 </body>
