feat: hover mouse and image perfil

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             </div>
             <div class="banner">
                 <h1>Web Developer & Front End Desing</h1>
-                <p>Magno Rafael</p>
+                <div class="img-eu">
+                    <!-- <img src="./assets/images/IMG_20210920_185735_343.webp" alt="Magno"> -->
+                </div>
+                <p>Magno Rafael Moraes Souza</p>
                 <button>Saiba mais</button>
 
             </div>
