feat: animation/image

--- a/index.html
+++ b/index.html
@@ -9,20 +9,47 @@
 </head>
 <body>
     <div class="container">
+        <div class="hamburguer">
+            <div class="line" id="line"></div>
+            <div class="line" id="line"></div>
+            <div class="line" id="line"></div>
+        </div>
+
         <header>
             <div class="img-wrapper">
                 <img src="./assets/images/backg.jpg" alt="">
             </div>
             <div class="banner">
                 <h1>Web Developer & Front End Desing</h1>
-                <div class="img-eu">
-                    <!-- <img src="./assets/images/IMG_20210920_185735_343.webp" alt="Magno"> -->
+                <div class="img-eu box2">
+                    <img class="banner-img" src="./assets/images/IMG_20210920_185735_343.webp" alt="Magno">
                 </div>
                 <p>Magno Rafael Moraes Souza</p>
+                <!-- <div>
+                    <h1>olá</h2>
+                    <p>teste</p>
+                </div> -->
                 <button>Saiba mais</button>
 
             </div>
+            
         </header>
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-github-alt"></i></a>
+                <a href=""><i class="fab fa-whatsapp"></i></a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
