--- a/index.html
+++ b/index.html
@@ -1,55 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./assets/favicon_io/favicon.ico">
-    <title>Projeto</title>
-</head>
-<body>
-    <div class="container">
-        <div class="hamburguer">
-            <div class="line" id="line"></div>
-            <div class="line" id="line"></div>
-            <div class="line" id="line"></div>
-        </div>
-
-        <header>
-            <div class="img-wrapper">
-                <img src="./assets/images/backg.jpg" alt="">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="shortcut icon" href="./assets/favicon_io/favicon.ico">
+        <title>Projeto</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="hamburguer">
+                <div class="line" id="line"></div>
+                <div class="line" id="line"></div>
+                <div class="line" id="line"></div>
+                <span>fechar</span>
             </div>
-            <div class="banner">
-                <h1>Web Developer & Front End Desing</h1>
-                <div class="img-eu box2">
-                    <img class="banner-img" src="./assets/images/IMG_20210920_185735_343.webp" alt="Magno">
+
+            <header>
+                <div class="img-wrapper">
+                    <img src="./assets/images/backg.jpg" alt="">
                 </div>
-                <p>Magno Rafael Moraes Souza</p>
-                <!-- <div>
-                    <h1>olá</h2>
-                    <p>teste</p>
-                </div> -->
-                <button>Saiba mais</button>
+                <div class="banner">
+                    <h1>Web Developer & Front End Desing</h1>
+                    <div class="img-eu box2">
+                        <img class="banner-img" src="./assets/images/IMG_20210920_185735_343.webp" alt="Magno">
+                    </div>
+                    <p>Magno Rafael Moraes Souza</p>
+                    <!-- <div>
+                        <h1>olá</h2>
+                        <p>teste</p>
+                    </div> -->
+                    <button>Saiba mais</button>
 
-            </div>
-            
-        </header>
-        <div class="sidebar">
-            <nav>
-                <ul class="menu">
-                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
-                </ul>
-            </nav>
-            <div class="social-media">
-                <a href=""><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-github-alt"></i></a>
-                <a href=""><i class="fab fa-whatsapp"></i></a>
+                </div>
+                
+            </header>
+            <div class="sidebar">
+                <nav>
+                    <ul class="menu">
+                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Home</span></a></li>
+                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Conhecimento</span></a></li>
+                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Projetos</span></a></li>
+                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Contato</span></a></li>
+                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Orçamento</span></a></li>
+                    </ul>
+                </nav>
+                <div class="social-media">
+                    <a class="social-media-i" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="social-media-g" href=""><i class="fab fa-github-alt"></i></a>
+                    <a class="social-media-w" href=""><i class="fab fa-whatsapp"></i></a>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
+    <script src="./script/script.js"></script>
+
 </html>
