conhecimento/html add

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 
             </header>
-            <div class="sidebar">
+            <aside class="sidebar">
                 <nav>
                     <ul class="menu">
                         <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Home</span></a></li>
@@ -50,7 +50,68 @@
                     <a class="social-media-g" href=""><i class="fab fa-github-alt"></i></a>
                     <a class="social-media-w" href=""><i class="fab fa-whatsapp"></i></a>
                 </div>
-            </div>
+            </aside>
+            <section class="sessao-conhecimento">
+                <div class="sessao-header">
+                    <h1>Conhecimento</h1>
+                </div>
+                <div class="conhecimentos">
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-html5"></i>
+                            <h3>HTML</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione laudantium, eveniet consequuntur ad porro illum debitis, accusamus, vero eligendi possimus in eos ea sapiente alias officia consequatur iure autem pariatur.</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-css3"></i>
+                            <h3>CSS</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias obcaecati sunt voluptatibus asperiores totam! Delectus velit qui ipsum aspernatur incidunt nihil cupiditate explicabo perspiciatis dolorem vel asperiores beatae, eaque ut.</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fas fa-pencil-alt"></i>
+                            <h3>Desing</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi impedit deleniti iste vel eius dolor illum nemo, odio ratione ex dicta ut. Optio ea vero ipsum, alias velit aut dolor.</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-js"></i>
+                            <h3>JavaScript</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi impedit deleniti iste vel eius dolor illum nemo, odio ratione ex dicta ut. Optio ea vero ipsum, alias velit aut dolor.</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fas fa-paint-brush"></i>
+                            <h3>Arte Digital</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptatibus ullam at, consequuntur sint fugiat unde sit inventore corrupti perferendis atque provident expedita iure quidem explicabo culpa alias eaque voluptates!</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-github-alt"></i>
+                            <h3>Github</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi impedit deleniti iste vel eius dolor illum nemo, odio ratione ex dicta ut. Optio ea vero ipsum, alias velit aut dolor.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </body>
     <script src="./script/script.js"></script>
