--- a/index.html
+++ b/index.html
@@ -15,34 +15,26 @@
                 <div class="line" id="line"></div>
                 <span>fechar</span>
             </div>
-
             <header>
-                <div class="img-wrapper">
+                <div class="img-wrapper" id="home">
                     <img src="./assets/images/backg.jpg" alt="">
                 </div>
-                <div class="banner">
+                <div class="banner" >
                     <h1>Web Developer & Front End Desing</h1>
                     <div class="img-eu box2">
                         <img class="banner-img" src="./assets/images/IMG_20210920_185735_343.webp" alt="Magno">
                     </div>
                     <p>Magno Rafael Moraes Souza</p>
-                    <!-- <div>
-                        <h1>olá</h2>
-                        <p>teste</p>
-                    </div> -->
                     <button>Saiba mais</button>
-
                 </div>
-                
             </header>
             <div class="sidebar">
                 <nav>
                     <ul class="menu">
                         <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Home</span></a></li>
-                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Conhecimento</span></a></li>
-                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Projetos</span></a></li>
+                        <li class="menu-item"><a href="#conhecimentos" class="menu-link"><span class="menu-link-word">Conhecimento</span></a></li>
+                        <li class="menu-item"><a href="#projetos" class="menu-link"><span class="menu-link-word">Projetos</span></a></li>
                         <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Contato</span></a></li>
-                        <li class="menu-item"><a href="#" class="menu-link"><span class="menu-link-word">Orçamento</span></a></li>
                     </ul>
                 </nav>
                 <div class="social-media">
@@ -51,8 +43,121 @@
                     <a class="social-media-w" href=""><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
+            <section class="sessao-conhecimentos box box-conteudo" id="conhecimentos">
+                <div class="sessao-header">
+                  <h1>Conhecimentos</h1>
+                </div>
+                <div class="conhecimentos">
+                  <div class="conhecimento">
+                    <div class="conhecimento-header">
+                      <i class="fab fa-html5"></i>
+                      <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                      <p>Lorem ipsum dolor sit amet consectetur aomnis enim, doloremti totam ipsum!</p>
+                    </div>
+                  </div>
+                  <div class="conhecimento">
+                    <div class="conhecimento-header">
+                      <i class="fab fa-css3-alt"></i>
+                      <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                      <p>Lorem ipsum dolor sit amet consecte. Quod.</p>
+                    </div>
+                  </div>
+                  <div class="conhecimento">
+                    <div class="conhecimento-header">
+                      <i class="fas fa-pencil-alt"></i>
+                      <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                      <p>Lorem ipsum dolor sit amet consectetur a distinctio maxime, at nemo quia aut?</p>
+                    </div>
+                  </div>
+                  <div class="conhecimento">
+                    <div class="conhecimento-header">
+                      <i class="fab fa-js"></i>
+                      <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labomo
+                      </p>
+                    </div>
+                  </div>
+                  <div class="conhecimento">
+                    <div class="conhecimento-header">
+                      <i class="fab fa-bootstrap"></i>
+                      <h3>Boostrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sequi, quasique ad, ut impedit.</p>
+                    </div>
+                  </div>
+                  <div class="conhecimentos-img-wrapper">
+                    <img class="img-conteudo" src="./assets/images/conhecimentos.png" alt="imagem conhecimento">
+                  </div>
+                </div>
+            </section>
+            <div class="sessao-projetos box" id="projetos">
+                <div class="sessao-header">
+                  <h1>Projetos</h1>
+                </div>
+                <div class="projetos boxx boxz">
+                  <div class="card ">
+                    <div class="card-img-wrapper">
+                      <img src="./assets/images/proj1.jpg" alt="imagem do projeto ToDo" />
+                    </div>
+                    <div class="card-info">
+                      <h2>ToDo List</h2>
+                      <h3>Javascript</h3>
+                      <p>Lorem ipsum dolor sit amet consect?</p>
+                      <button class="btn">Saiba Mais</button>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-img-wrapper">
+                      <img src="./assets/images/proj2.jpg" alt="imagem do projeto Maratona" />
+                    </div>
+                    <div class="card-info">
+                      <h2>Maratona</h2>
+                      <h3>HTML, CSS</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur .</p>
+                      <button class="btn">Saiba Mais</button>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-img-wrapper">
+                      <img src="./assets/images/proj3.jpg" alt="imagem do projeto Casa Bela" />
+                    </div>
+                    <div class="card-info">
+                      <h2>Casa Bela</h2>
+                      <h3>HTML</h3>
+                      <p>Lorem, ipsum dolor sit amet consectetur ad?</p>
+                      <button class="btn">Saiba Mais</button>
+                    </div>
+                  </div>
+                </div>
+              </section>
         </div>
+        <footer class="boxf">
+            <div class="footer-content">
+              <p>
+                Copyright &copy; 2021, MAGNO - Todos os diretos reservados</p>
+            </div>
+            <div class="social-list">
+                <ul>
+                  <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                  <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                </ul>
+            </div>
+          </footer>
+          <a href="#home" id="link-topo">
+            <i class="fas fa-arrow-up"></i>
+          </a>
     </body>
+
     <script src="./script/script.js"></script>
 
 </html>
